skin/light/light.css
@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");

.tabbrowser-tabs {
    background-color: #FBFBFB !important;
    height: calc(100vh - 42px);
    overflow-y: hidden;
    margin: 0 !important;
    padding: 0 !important;
}

#verticaltabs-box:hover .tabbrowser-tabs,
#verticaltabs-box[pinned="true"] .tabbrowser-tabs {
  overflow-y: auto;
}

.tabbrowser-arrowscrollbox {
  height: calc(100vh - 42px);
}

#verticaltabs-box .tabbrowser-arrowscrollbox > scrollbox {
    overflow-y: hidden !important;
}

#verticaltabs-box:hover .tabbrowser-arrowscrollbox > scrollbox,
#verticaltabs-box[pinned="true"] .tabbrowser-arrowscrollbox > scrollbox {
  overflow-y: auto !important;
}

#tabbrowser-tabs::before,
#tabbrowser-tabs + hbox,
#tabbrowser-tabs > hbox {
  display: none !important;
}

#browser {
  display: block;
  height: 100vh;
  position:relative;
}

#verticaltabs-box {
  border-right: 1px solid ThreeDShadow;
  box-shadow: 0 0 10px rgba(0,0,0,0.0), inset 0 0 10px rgba(0,0,0,0.4);
  display: flex;
  flex-direction: column;
  height: 100vh;
  left: 0;
  overflow-x: hidden;
  position: absolute;
  top: 0;
  transition: box-shadow 150ms ease-out 300ms, width 150ms ease-out 300ms;
  width: 45px;
  z-index: 3;
}

#main-window[inFullscreen][inDOMFullscreen] #verticaltabs-box {
  visibility: collapse;
}

#verticaltabs-box:hover {
  box-shadow: 0 0 10px rgba(0,0,0,0.4), inset 0 0 10px rgba(0,0,0,0.0);
  width: 260px;
}

#verticaltabs-box[pinned="true"] {
  box-shadow: none;
  transition: box-shadow 0ms ease-in-out 0ms;
  width: 260px;
}

#alltabs-button {
  display: none;
  min-height: var(--tab-min-height);
}

#verticaltabs-box:hover #alltabs-button,
#verticaltabs-box[pinned="true"] #alltabs-button {
  display: -moz-box;
}

#pin-button {
  background: no-repeat center/16px url("resource://tabcenter/skin/pin.png");
  border: none !important;
  margin: 0 !important;
  -moz-appearance: none !important;
  width: 40px;
}

#verticaltabs-box[pinned="true"] #pin-button {
  background-image: url("resource://tabcenter/skin/pin-hover.png");
  background-color: #808080 !important;
}

/*#browser-box {*/
#appcontent {
  border-top: 1px solid rgb(160,160,160);
  left: 45px;
  top: 0;
  position: absolute;
}

#verticaltabs-box[pinned="true"] + #appcontent {
  left: 260px;
}

#main-window[inFullscreen][inDOMFullscreen] #appcontent {
  left: 0 !important
}

#navigator-toolbox,
.browserContainer {
  width: calc(100vw - 45px);
}

#verticaltabs-box[pinned="true"] + #appcontent #navigator-toolbox,
#verticaltabs-box[pinned="true"] + #appcontent .browserContainer {
  width: calc(100vw - 260px);
}

#main-window[inFullscreen][inDOMFullscreen] .browserContainer {
  width: 100vw !important;
}

#panel-3-1 {
  height: calc(100vh - 40px);
}

#main-window[inFullscreen][inDOMFullscreen] .browserContainer {
  height: calc(100vh + 4px);
  margin-top: -14px;
}

.tabbrowser-tab {
    -moz-box-pack: start;
    -moz-box-flex: 0;
    -moz-appearance: none !important;
    background: transparent !important;
    border: 0 !important;
    border-radius: 0 !important;
    margin: 0 !important;
    height: 36px !important;
    min-height: 36px !important;
    max-height: 36px !important;
    color: #333333 !important;
    border-left: 4px solid transparent !important;
    width: 260px !important;
}

.tabbrowser-tab[selected="true"],
.tabbrowser-tab[multiselect="true"] {
    margin: 0 !important;
    background-color: #dadada !important;
    font-weight: normal;
    text-shadow: none;
    border-left: 4px solid #ff9500 !important;
    border-radius: 0 !important;
    font-weight: 600 !important;
}
.tabbrowser-tab[selected="true"]:-moz-window-inactive,
.tabbrowser-tab[multiselect="true"]:-moz-window-inactive {
    background-color: InactiveCaption !important;
    color: InactiveCaptionText !important;
   /* gnome/gtk/cleartype doesn't seem to have inactive states for selected items, lets try this */
}

.tabbrowser-tab:not([selected="true"]):hover {
    margin: 0 !important;
    background-color: #ebebeb !important;
}

.tabbrowser-tab:not(:hover) .tab-close-button {
    visibility: collapse !important;
}

.tab-stack {
  min-height: 28px;
}

/* Keep the close button at a safe distance from the tab label. */
.tab-close-button {
    display: -moz-box !important;
    background: no-repeat center/16px url("resource://tabcenter/skin/stop.svg") !important;
    margin: 0 0 0 3px !important;
    width: 40px;
    height: 40px;
}

.tab-close-button:hover {
    background: no-repeat center/16px url("resource://tabcenter/skin/stop-hover.svg") !important;
    background-color: #d94141 !important;
}

.tab-close-button > .toolbarbutton-icon {
  display: none;
}

.tab-label {
  text-align: left !important;
}

.tab-label[pinned] {
    margin-left: 6px !important;
    position: relative !important;
}

.tab-content {
  padding: 0px !important;
  margin: 0px !important;
  min-height: 36px;
  max-height: 36px;
}

.tab-throbber,
.tab-icon-image {
  padding: 3px;
  background-color: transparent !important;
  border-radius: 2px;
  display: -moz-box !important;
  min-height: 22px !important;
  min-width: 22px !important;
  opacity: 1 !important;
}

.tab-throbber,
.tabbrowser-tab[busy] .tab-icon-image {
  display: none !important;
}

.tabbrowser-tab[busy] .tab-throbber {
  display: -moz-box !important;
}
/** Drop indicator for drag'n'drop of tabs - Works OOTB(TM)- Just needs a margin.**/
.tab-drop-indicator {
    margin-top: -11px !important;
    margin-bottom: 0 !important;
}

#TabsToolbar:not(:-moz-lwtheme)  {
    min-height: 42px !important;
    border-bottom-left-radius: 0px !important;
    box-shadow: none !important;
    -moz-appearance: none !important;
    border-top: 1px solid rgb(160,160,160) !important;
    -moz-border-right-colors: #fcfcfc rgb(154,154,154) !important;
    background-color: #f1f1f1 !important;
    background-image: none !important;
}

#TabsToolbar {
  display: flex;
}
#TabsToolbar > toolbarbutton {
  min-height: 100% !important;
}

#TabsToolbar > #new-tab-button {
  -moz-box-orient: horizontal !important;
  padding: 0 5px !important;
  width: auto !important;
}
#TabsToolbar #new-tab-button .toolbarbutton-text {
  display: -moz-box;
  padding: 0 2px !important;
}
#TabsToolbar #new-tab-spacer {
  flex: 1 0 100px;
}

/* Tab toolbar styling */

#verticaltabs-groupbutton {
    /* TODO need icon to symbolize tab group */
    list-style-image: url("chrome://browser/skin/Toolbar.png");
    -moz-image-region: rect(0, 234px, 18px, 216px);
}


/*** Group related styles ***/

.tabbrowser-tab[verticaltabs-ingroup],
.tabbrowser-tab[verticaltabs-ingroup]:hover {
    padding-left: 16px !important;
}

.tabbrowser-tab[verticaltabs-group] {
}

.tabbrowser-tab[verticaltabs-group] .tab-close-button {
    opacity: 1 !important;
}

.tabbrowser-tab[verticaltabs-group] .tab-text {
    padding-left: 3px !important;
}

.verticaltabs-textbox {
    margin: 0;
}

.verticaltabs-counter {
    visibility: collapse;
}

.verticaltabs-droptarget {
    background-color: Highlight !important;
    color: HighlightText !important;
}

.verticaltabs-dropingroup {
    margin-left: 10px !important;
}

.verticaltabs-droptonewgroup {
    /* TODO need icon to symbolize tab group */
    list-style-image: url("chrome://browser/skin/Toolbar.png");
    -moz-image-region: rect(0, 234px, 18px, 216px);
}

.verticaltabs-twisty {
    cursor: default !important;
    margin-left: 1px !important;
    margin-right: 2px !important;
    -moz-appearance: treetwisty !important;
}
.tabbrowser-tab[verticaltabs-collapsed="true"] .verticaltabs-twisty {
    -moz-appearance: treetwistyopen !important;
}

/*** Link Display ***/

.statuspanel-label {
    -moz-appearance: tooltip !important;
    margin-right: 0px !important;
    margin-left: 0px !important;
    box-shadow: 8px 3px 0 rgba(0,0,0,.18) !important; /* would otherwise display a transparent pixel on the tooltip's corner */
}

.statuspanel-inner {
    height: 100% !important;
}

#main-window[sizemode="normal"]:not([inFullscreen="true"]) .statuspanel-inner {
    padding-left: 0px !important;
    padding-right: 0px !important;
}

statuspanel[mirror]:-moz-locale-dir(ltr),
statuspanel[mirror]:-moz-locale-dir(rtl) {
    padding: 6px 6px 0px 0px !important;
}

statuspanel:-moz-locale-dir(ltr):not([mirror]),
statuspanel:-moz-locale-dir(rtl):not([mirror]) {
    padding: 0px 0px 0px 4px !important;
}

statuspanel[mirror]:-moz-locale-dir(ltr) .statuspanel-inner,
statuspanel[mirror]:-moz-locale-dir(rtl) .statuspanel-inner {
    margin-top: 8px !important;
    margin-bottom: 10px !important;
    box-shadow: 5px 5px 0 -4px rgba(0,0,0,.18), 5px 5px 0 -3px rgba(0,0,0,.15), 5px 5px 0 -2px rgba(0,0,0,.12), 5px 5px 0 -1px rgba(0,0,0,.09) !important;
    padding: 0px 0px !important;
    border-radius: 4px !important;
}

statuspanel:-moz-locale-dir(ltr):not([mirror]) .statuspanel-inner,
statuspanel:-moz-locale-dir(rtl):not([mirror]) .statuspanel-inner {
    margin-top: 14px !important;
    margin-bottom: 5px !important;
    box-shadow: 5px 5px 0 -4px rgba(0,0,0,.18), 5px 5px 0 -3px rgba(0,0,0,.15), 5px 5px 0 -2px rgba(0,0,0,.12), 5px 5px 0 -1px rgba(0,0,0,.09) !important;
    padding: 0px 0px !important;
    border-radius: 4px !important;
}

@media (-moz-os-version: windows-win7), (-moz-os-version: windows-win8) {
  #appcontent {
    top: 1px;
  }
  #verticaltabs-box {
    top: 1px;
    border-left: 1px solid rgb(160,160,160);
  }
  #TabsToolbar {
    height: 44px !important;
    margin: 0 !important;
  }
  #nav-bar {
    border-left: none !important;
  }

  .tabbrowser-tabs,
  .tabbrowser-arrowscrollbox {
    height: calc(100vh - 43.5px);
  }

}

